ms-product-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ms-produc-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-product-vs
spec:
  hosts:
  - "*"
  gateways:
  - ms-produc-gateway
  http:
  - match:
    - uri:
        prefix: /ms-product/
    rewrite:
      uri: /      
    route:
    - destination:
        host: ms-product
  - match:
    - uri:
        prefix: /ms-product-price/
    rewrite:
      uri: /          
    route:
    - destination:
        host: ms-product-price
